# banker

./: Cargo.toml  README.md
banker/: Cargo.toml  README.md
banker/examples/: convert.rs
banker/src/: error.rs  formats.rs  io.rs  lib.rs  parse.rs  parsers.rs  printers.rs  records.rs  tests.rs
banker/src/formats/: text.rs
banker/src/io/: text.rs
banker/src/io/text/: tests.rs
banker/src/parsers/: csv_parser.rs  json_parser.rs
banker/src/printers/: csv_printer.rs  json_printer.rs
banker/src/records/: base.rs  csv.rs  csv_records.rs  json.rs  json_records.rs
banker/src/tests/: convert.rs  convert_tests.rs  parse.rs  parse_tests.rs  print.rs  print_tests.rs
bconv/: Cargo.toml  README.md
bconv/samples/: data.csv
bconv/src/: cli.rs  config.rs  converter.rs  error.rs  main.rs
samples/: data.json  records_example.json
specs/: YPBankTextFromat_ru.md
src/: error.rs  lib.rs  parsers.rs  records.rs
src/parsers/: csv_parser.rs  json_parser.rs
src/printers/: csv_printer.rs  json_printer.rs
src/records/: csv_record.rs  json_record.rs
