[package]
name = "banker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0", features = ["serde"] }
csv = "1"
log = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0"
strum_macros = "0"
thiserror = "2"
thiserror-context = "0"

[dev-dependencies]
rstest = "0.26.1"
